Integrated command pattern in SibillaRuntime